<resources>
    <string name="app_name">MyLibrary</string>
    <string name="username">UserName*</string>
    <string name="password">Password*</string>
    <string name="login">Log In</string>
    <string name="signup">Register</string>
    <string name="firstname">First Name*</string>
    <string name="secondname">Second Name</string>
    <string name="email">Email Id*</string>
    <string name="mobile">Mobile No</string>
    <string name="newuser">New User? SignUp</string>
    <string name="createpassword">Create password</string>
    <string name="reenterpassword">Re-Enter Password</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Are you sure want to logout?</string>
</resources>
