<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginTop="30dp"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textPersonName"
        android:hint="@string/firstname" />
    <EditText
        android:id="@+id/editText_secondname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textPersonName"
        android:hint="@string/secondname" />
    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/editText_mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="phone"
        android:hint="@string/mobile" />
    <EditText
        android:id="@+id/editText_createpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint="@string/createpassword" />
    <EditText
        android:id="@+id/editText_reenterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint="@string/reenterpassword" />

<Button
    android:layout_marginTop="20dp"
    android:id="@+id/button_register"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/signup"/>
</LinearLayout>